// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<QuestionVideo /> should match the snapshot with video 1`] = `
.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  height: auto;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  justify-items: space-between;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 {
  width: auto;
  height: auto;
  display: block;
  border-radius: 5px;
  width: 100%;
}

.c5 {
  width: auto;
  height: auto;
  display: block;
  border-radius: 5px;
  visibility: hidden;
  margin-left: 15px;
  cursor: pointer;
}

.c1 {
  width: auto;
  height: auto;
  display: block;
  border-radius: 5px;
  width: 100%;
  padding-top: 14px;
  padding-bottom: 14px;
  padding-right: 21px;
  padding-left: 21px;
  border-radius: 5px;
  border-radius: 5px;
}

.c1:hover {
  background-color: #E9F1FB;
}

.c6 {
  width: auto;
  height: auto;
}

.c3 {
  position: relative;
  padding-top: 56.25%;
  height: 100%;
  width: 100%;
}

.c4 {
  position: absolute;
  top: 0;
  left: 0;
}

<div
  className="c0"
  width="100%"
>
  <div
    className="c1"
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    width="100%"
  >
    <div
      className="c2"
    >
      <div
        className="c3"
      >
        <div
          className="c4"
          style={
            Object {
              "height": "100%",
              "width": "100%",
            }
          }
        />
      </div>
      <div
        className="c5"
        onClick={[Function]}
        visibility="hidden"
      >
        <img
          alt="bin-icon"
          className="c6"
          src="IMAGE_MOCK"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`<QuestionVideo /> should match the snapshot without video 1`] = `
.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  height: 93px;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 93px;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  height: auto;
  width: 100%;
}

.c4 {
  padding: 12px;
  border-style: solid;
  border-width: 1px;
  border-color: #E9F1FB;
  border-radius: 5px;
  background-color: transparent;
  border-color: transparent;
  margin-right: 9px;
  height: auto;
  color: #2F3850;
}

.c4:focus {
  box-shadow: none;
  outline: none;
  border-color: #107969;
}

.c0 {
  width: auto;
  height: auto;
  display: block;
  border-radius: 5px;
  width: 100%;
  padding-right: 16px;
  padding-left: 16px;
  background-color: rgba(233,241,251,1);
}

<div
  className="c0"
  width="100%"
>
  <div
    className="c1"
    height={93}
  >
    <div
      className="c2"
      width="100%"
    >
      <div
        className="c3"
      >
        <input
          className="c4"
          height="auto"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          placeholder="Use videos from YouTube or Vimeo. Paste link here."
          type="text"
          value=""
        />
      </div>
    </div>
  </div>
</div>
`;
